# temus

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 02_portfolio.py  03_chat_message_ui_context.py  04_rag.py  cc68bfd490f2_init_users_chat_sessions_chat_messages.py
backend/app/: main.py
backend/app/core/: config.py  deps.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  account.py  chat_message.py  chat_session.py  chunk.py  document.py  goal.py  media_asset.py  position.py  price.py  user.py
backend/app/routers/: chat.py  health.py  portfolio.py  prices.py  rag.py  tools.py  uploads.py
backend/app/schemas/: chat.py  portfolio.py
backend/app/services/: embeddings.py  llm.py  rag.py  risk.py  tracing.py  vision.py  web_search.py
backend/app/services/agents/: __init__.py  analyst.py  base.py  researcher.py  sequential.py  tools.py  writer.py
backend/scripts/: ingest_corpus.py  repl_chat.py  seed_demo.py
backend/tests/: conftest.py  factories.py
backend/tests/integration/: test_advisor_pipeline.py  test_chat_api.py  test_chat_ui_context.py  test_health.py  test_portfolio_api.py  test_prices_stream.py  test_rag_api.py  test_repl_smoke.py  test_seed_demo.py  test_tools_api.py  test_uploads_api.py
backend/tests/unit/: test_chunker.py  test_config.py  test_embeddings.py  test_llm_stub.py  test_models.py  test_portfolio_models.py  test_repl_chat.py  test_risk.py  test_tracing.py  test_vision.py  test_web_search.py
(+59 files in other folders)
